syntax = "proto3";
package orders;

option go_package = 'pmozhchil/orders';

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service OrdersService {
  rpc List (ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/api/order/v1/orders"
    };
  }
  rpc Create (CreateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/order/v1/order"
      body: "*"
    };
  }
}

message ListRequest {
  int64 client_id = 1;
}
message ListResponse {
  message Order {
    int64 id = 1;
    int64 client_id = 2;
    int64 number = 3;
    string order_number = 4;
  }

  repeated Order orders = 1;
}
message CreateRequest {
  int64 client_id = 1;
}